[HTML, css] Fix alignment of tables #6331

--- a/assets/scss/main.sass
+++ b/assets/scss/main.sass
@@ -271,7 +271,7 @@ a
     border: none
     background: $card-header-bg
     color: $dark-white
-    padding: 0.22rem 1.0rem
+    padding: 0.75rem 1.25rem
     &[role=tab]
         background: $secondary-dark
 
