--- a/assets/scss/trading.sass
+++ b/assets/scss/trading.sass
@@ -100,3 +100,7 @@
     .token-name
       span.current-token-name
         font-size: 18px !important
+
+.deployed-token
+  padding: 0.75rem 1.25rem
+  
